clusters/lab.k8s.callahan.house/cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    istio.io/dataplane-mode: ambient
