clusters/lab.k8s.callahan.house/intel.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: intel
  labels:
    istio.io/dataplane-mode: ambient
