clusters/lab.k8s.callahan.house/istio-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
