clusters/lab.k8s.callahan.house/metrics-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metrics-server
  labels:
    istio.io/dataplane-mode: ambient
