clusters/lab.k8s.callahan.house/nextcloud.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
