clusters/lab.k8s.callahan.house/nfs-provisioner.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-provisioner
  labels:
    istio.io/dataplane-mode: ambient
