clusters/lab.k8s.callahan.house/node-feature-discovery.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-feature-discovery
  labels:
    istio.io/dataplane-mode: ambient
